--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
   <body>
     <h1> hello world </h1>
     <p> i am hosted with github </p>
