--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1> hello world </h1>
