--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>welcome</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1> hello world </h1>
-    <p> i am hosted with github </p>
-  </body>
+</head>
+<body>
+    <div style="height: 100vh;">
+        <h1>Ashkan Mohammadi</h1>
+    </div>
+
+</body>
 </html>
