added special effects.
details:
- added talk to me and work samples buttons
- added a little close button just under the main menu

--- a/public/index.html
+++ b/public/index.html
@@ -18,18 +18,25 @@
                     <li class="item">داستان من</li>
                     <li class="item">اطلاعات تماس</li>
                 </ul>
+                <div class="wclose-btn">
+                    <div class="wbtn" data-action="toggle-menu"></div>
+                </div>
             </div>
-            <div class="menu-icon" id="menu-btn">
-                <span class="material-icons">menu</span>
+            <div class="menu-icon">
+                <span class="material-icons" data-action="toggle-menu">menu</span>
             </div>
-            <div class="title">
+            <main class="title">
                 <div class="self">
                     اشکان محمدی
                 </div>
                 <div class="description">
                     توسعه دهنده وب. علاقه مند به تکنولوژی و طراحی. 
                 </div>
-            </div>
+            </main>
+            <footer>
+                <button class="pulse">نمونه کار هام</button>
+                <button class="offset">بیا گپ بزنیم</button>
+            </footer>
         </div>
     </div>
 
