replaced with svelte js official template

--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashkan Mohammadi</title>
-    <link rel="stylesheet" href="./build/app-bundle.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body>
-    <div class="header">
-        <div class="wrapper">
-            <div class="menu" id="menu">
-                <ul class="container">
-                    <li class="item">پروژه ها</li>
-                    <li class="item">مقالات</li>
-                    <li class="item">داستان من</li>
-                    <li class="item">اطلاعات تماس</li>
-                </ul>
-                <div class="wclose-btn">
-                    <div class="wbtn" data-action="toggle-menu"></div>
-                </div>
-            </div>
-            <div class="menu-icon">
-                <span class="material-icons" data-action="toggle-menu">menu</span>
-            </div>
-            <main class="title">
-                <div class="self">
-                    اشکان محمدی
-                </div>
-                <div class="description">
-                    توسعه دهنده وب. علاقه مند به تکنولوژی و طراحی. 
-                </div>
-            </main>
-            <footer>
-                <button class="pulse">نمونه کار هام</button>
-                <button class="offset">بیا گپ بزنیم</button>
-            </footer>
-        </div>
-    </div>
+	<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-    <script src="./build/app-bundle.js"></script>
+	<title>Svelte app</title>
+
+	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='/build/bundle.css'>
+
+	<script defer src='/build/bundle.js'></script>
+</head>
+
+<body>
 </body>
 </html>
