--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='build/bundle.css'>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fast-xml-parser/3.19.0/parser.js"></script>
 	<script defer src='build/bundle.js'></script>
 </head>
 
